--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -55,7 +55,7 @@
         <div class="card-header">
             <div class="row">
                 <div class="col-md-9">
-                    <h4 class="card-title">Add Membership</h4>
+                    <h4 class="card-title">Add New Membership Package</h4>
                 </div>
                 <div class="ml-md-auto">
 
@@ -207,7 +207,7 @@
                 <div class="card-header">
                     <div class="row">
                         <div class="col-md-6">
-                            <h4 class="card-title"> Membership List</h4>
+                            <h4 class="card-title"> Membership Package List</h4>
                         </div>
 
                         <div class="ml-md-auto">
@@ -313,9 +313,9 @@
                     </div>
                 </div>
                 <div class="modal-footer justify-content-center">
-                        <button type="button" class="btn btn-secondary btn-round" data-dismiss="modal">
-                            <i class="fa fa-times" aria-hidden="true"></i> Close
-                        </button>
+                    <button type="button" class="btn btn-secondary btn-round" data-dismiss="modal">
+                        <i class="fa fa-times" aria-hidden="true"></i> Close
+                    </button>
                 </div>
             </div>
         </div>
