--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -431,7 +431,7 @@
                     </div>
                     <div class="card-body text-center">
                         <div class="card-body">
-                            <s class="text-secondary">&#8377;{{item.totalprice}}</s><span class="badge bg-info">Save {{
+                            <s class="text-secondary">&#8377;{{item.totalprice}}</s><span class="badge bg-danger">Save {{
                                 item.percentage }} %</span>
 
                             <div class="price">
