--- a/src/app/pages/forgot-pwd/forgot-pwd.component.html
+++ b/src/app/pages/forgot-pwd/forgot-pwd.component.html
@@ -124,7 +124,7 @@
                             </div>
                             <div class="link d-flex justify-content-center" style="padding-top:10px ;color:blue;" >
                                 <a >
-                                    <strong>Resend OTP in: </strong>{{timeLeft}}
+                                    <strong>Resend OTP in: </strong>{{timeLeft}} Sec.
                                 </a>
                             </div>
                             <div class="card-footer text-center">
