--- a/src/app/membership/purchsed-membership/purchsed-membership.component.html
+++ b/src/app/membership/purchsed-membership/purchsed-membership.component.html
@@ -5,7 +5,13 @@
                 <div class="col-md-9">
                     <h4 class="card-title">Join Our Membership</h4>
                 </div>
+                <!-- <div class="ml-md-auto">
+
+                </div> -->
                 <div class="ml-md-auto">
+                    <button type="submit" class="btn btn-info btn-round ml5" routerLink="/membership">
+                        <i class="fa fa-plus" aria-hidden="true"></i> Add New Package
+                    </button>
                     <button type="cancel" class="btn btn-danger btn-round" routerLink='/dashboard'>
                         <i class="fa fa-arrow-left"></i> Back
                     </button>
@@ -41,8 +47,8 @@
                 <div class="col-md-4">
                     <label class="col-form-label">Contact Number</label>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="fname" value={{searchCustomer.contact}}
-                            name="fname" disabled />
+                        <input type="text" class="form-control" id="fname" value={{searchCustomer.contact}} name="fname"
+                            disabled />
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -133,8 +139,7 @@
                     </div>
                 </div>
                 <div class="ml-md-auto" style="margin-top:5% ;">
-                    <button type="submit" class="btn btn-info btn-round ml5"
-                        (click)="savePurchaseMembershipDetail()">
+                    <button type="submit" class="btn btn-info btn-round ml5" (click)="savePurchaseMembershipDetail()">
                         <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
                     </button>
                     <button type="submit" class="btn btn-danger btn-round" (click)="backToMembership()">
@@ -193,13 +198,13 @@
                                     <td class="text-center">{{ item.membershipprice }} ₹</td>
                                     <td class="text-center">{{ item.membershipdiscount}} %</td>
                                     <td class="text-center">
-                                        <button class="btn btn-success" *ngIf="item.isactive" >
-                                          Active
+                                        <button class="btn btn-success" *ngIf="item.isactive">
+                                            Active
                                         </button>
                                         <button class="btn btn-danger" *ngIf="!item.isactive">
-                                          Deactive
+                                            Deactive
                                         </button>
-                                      </td>
+                                    </td>
                                     <td class="text-right">
                                         <button type="button" rel="tooltip" class="btn btn-info btn-icon btn-sm"
                                             data-toggle="modal" data-target="#membershipServicesModal"
@@ -237,43 +242,43 @@
 
     </div>
     <div class="modal fade" id="membershipServicesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-notice">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                    <i class="nc-icon nc-simple-remove"></i>
-                </button>
-                <h5 class="modal-title" id="myModalLabel">Active Membership Services List</h5>
-            </div>
-            <div class="modal-body">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead class="text-primary">
-                            <th class="text-center">#</th>
-                            <th class="text-center">Service Name</th>
-                            <!-- <th class="text-center">Service Price</th> -->
-                            <th class="text-center">No Of Services</th>
-                        </thead>
-                        <tbody>
-                            <tr
-                                *ngFor="let item of purchsedServices |  paginate: { id:'model_pagination',itemsPerPage: 10, currentPage: modelPage,totalItems:totalModelRecords }">
-                                <td class="text-center">{{ item.index }}</td>
-                                <td class="text-center">{{ item.sname}}</td>
-                                <td class="text-center">{{ item.quntity}}</td>
-                                <!-- <td class="text-center">{{ item.serviceprice }}</td> -->
-                            </tr>
-
-                        </tbody>
-                    </table>
+        aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-notice">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                        <i class="nc-icon nc-simple-remove"></i>
+                    </button>
+                    <h5 class="modal-title" id="myModalLabel">Active Membership Services List</h5>
                 </div>
-            </div>
-            <div class="modal-footer justify-content-center">
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead class="text-primary">
+                                <th class="text-center">#</th>
+                                <th class="text-center">Service Name</th>
+                                <!-- <th class="text-center">Service Price</th> -->
+                                <th class="text-center">No Of Services</th>
+                            </thead>
+                            <tbody>
+                                <tr
+                                    *ngFor="let item of purchsedServices |  paginate: { id:'model_pagination',itemsPerPage: 10, currentPage: modelPage,totalItems:totalModelRecords }">
+                                    <td class="text-center">{{ item.index }}</td>
+                                    <td class="text-center">{{ item.sname}}</td>
+                                    <td class="text-center">{{ item.quntity}}</td>
+                                    <!-- <td class="text-center">{{ item.serviceprice }}</td> -->
+                                </tr>
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer justify-content-center">
                     <button type="button" class="btn btn-secondary btn-round" data-dismiss="modal">
                         <i class="fa fa-times" aria-hidden="true"></i> Close
                     </button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </div>
