--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@
                     <b class="caret"></b>
 
                 </div>
-                <span style="color:gold">(Members)</span>
+                <span style="color:gold" *ngIf="member==1">(Members)</span>
 
                 <!-- <b class="caret"></b> -->
 
